[gd_scene load_steps=6 format=3 uid="uid://cnf5wmwfmy1i5"]

[ext_resource type="Script" path="res://scripts/door.gd" id="1_2monv"]
[ext_resource type="AudioStream" uid="uid://cqtq2yroqiqgk" path="res://assets/sound/door_sound.WAV" id="1_3xbu7"]
[ext_resource type="FontFile" uid="uid://ce0yr85hkdf32" path="res://assets/fonts/PeaberryBase.ttf" id="2_grld3"]
[ext_resource type="Texture2D" uid="uid://hx73fsuc3yk8" path="res://assets/sprites/interface/red_button.png" id="3_sdjsj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vf7c0"]
size = Vector2(48, 64)

[node name="Area2D" type="Area2D"]
script = ExtResource("1_2monv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(24, 32)
shape = SubResource("RectangleShape2D_vf7c0")

[node name="DoorSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1_3xbu7")
volume_db = 24.0

[node name="InteractionLabel" type="Label" parent="."]
offset_left = -6.08409
offset_top = 27.1301
offset_right = 125.916
offset_bottom = 50.1301
scale = Vector2(0.405388, 0.420066)
theme_override_fonts/font = ExtResource("2_grld3")
text = "[E] to interact"

[node name="InteractionButton" type="Sprite2D" parent="."]
position = Vector2(-2.08411, 30.1301)
scale = Vector2(0.473272, 0.490407)
texture = ExtResource("3_sdjsj")
